[gd_scene load_steps=11 format=3 uid="uid://31gm7jm103mu"]

[ext_resource type="Script" path="res://Scenes/Menu/main.gd" id="1_b2fxe"]
[ext_resource type="Texture2D" uid="uid://eiaqd3iqn0v6" path="res://Assets/Background/MainMenu.webp" id="2_uuutm"]
[ext_resource type="PackedScene" uid="uid://diyf188ntlsjy" path="res://Scenes/Menu/options_menu.tscn" id="3_g4vtd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k8vsb"]
texture = ExtResource("2_uuutm")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_70fa7"]
bg_color = Color(0.0521063, 0.433774, 0.171311, 0.921569)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t40xj"]
bg_color = Color(0.0862745, 0.627451, 0.258824, 0.921569)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uq7mu"]
bg_color = Color(0.00379501, 0.41237, 0.677603, 0.921569)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u717q"]
bg_color = Color(0.027451, 0.592157, 0.956863, 0.921569)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lwwb5"]
bg_color = Color(0.609312, 0.0310873, 0.116096, 0.921569)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8u2jr"]
bg_color = Color(0.913725, 0.0901961, 0.2, 0.921569)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b2fxe")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_k8vsb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -100.0
offset_right = 125.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../ExitButton")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_70fa7")
theme_override_styles/hover = SubResource("StyleBoxFlat_70fa7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_70fa7")
theme_override_styles/normal = SubResource("StyleBoxFlat_t40xj")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_uq7mu")
theme_override_styles/hover = SubResource("StyleBoxFlat_uq7mu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uq7mu")
theme_override_styles/normal = SubResource("StyleBoxFlat_u717q")
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_lwwb5")
theme_override_styles/hover = SubResource("StyleBoxFlat_lwwb5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwwb5")
theme_override_styles/normal = SubResource("StyleBoxFlat_8u2jr")
text = "Exit"

[node name="Options_Menu" parent="." instance=ExtResource("3_g4vtd")]
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
